# fapolicy-analyzer

./: .clippy.toml  .containerignore  .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  .towncrier.template.md  .travis.yml  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Makefile  Pipfile  README.md  about_template  fapolicy-analyzer.spec  help.py  help_utils.py  pyproject.toml  session1.json  session2.json  setup.cfg  setup.py  setup_cmds.py  setup_help_utils.py  version.py
.copr/: Makefile
.github/: rpm-matrix.json
Help/: __init__.py  version
cli/: Cargo.toml
core/: Cargo.toml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: app.rs  check.rs  error.rs  event.rs  fapolicyd.rs  lib.rs  log.rs  rpm.rs  sha.rs  sys.rs  trust.rs
crates/analyzer/src/events/: analysis.rs  audit.rs  db.rs  event.rs  mod.rs  parse.rs  read.rs
crates/analyzer/src/rules/: db.rs  decision.rs  file_type.rs  mod.rs  object.rs  permission.rs  read.rs  rule.rs  subject.rs
crates/analyzer/src/users/: group.rs  load.rs  mod.rs  parse.rs  read.rs  user.rs
crates/analyzer/tests/: test_analyzing.rs  test_escaped_logs.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  trust.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  cfg.rs  error.rs  lib.rs  sys.rs
crates/daemon/: Cargo.toml  readme.md
crates/daemon/src/: error.rs  fapolicyd.rs  lib.rs  pipe.rs  profiler.rs  profiler.service  rpm.rs  stats.rs  svc.rs  tester.rs  version.rs
crates/daemon/src/conf/: config.rs  db.rs  error.rs  file.rs  key.rs  load.rs  mod.rs  ops.rs  parse.rs  read.rs  write.rs
crates/daemon/tests/: load_config.rs  parse_stats.rs
crates/daemon/tests/data/: bad-values.conf  state.0
crates/pyo3/: Cargo.toml
crates/pyo3/src/: acl.rs  analysis.rs  app.rs  auparse.rs  change.rs  check.rs  config.rs  daemon.rs  event.rs  features.rs  lib.rs  profiler.rs  rules.rs  svc.rs  system.rs  trust.rs
crates/rules/: Cargo.toml  README.md
crates/rules/src/: db.rs  decision.rs  dir_type.rs  error.rs  file_type.rs  lib.rs  load.rs  object.rs  ops.rs  parse.rs  parsev2.rs  permission.rs  read.rs  rule.rs  set.rs  subject.rs  write.rs
crates/rules/src/linter/: findings.rs  lint.rs  mod.rs
crates/rules/src/parser/: comment.rs  decision.rs  errat.rs  error.rs  from_str.rs  legacy.rs  marker.rs  mod.rs  object.rs  parse.rs  permission.rs  rule.rs  set.rs  subject.rs  tests.rs  trace.rs
crates/rules/tests/: decision_error_positions.rs  deserialize.rs  write.rs
crates/tools/: Cargo.toml  fapolicy_profiler.rs  rule_check.rs  trust_db_util.rs  trustdb_add.rs  trustdb_dump.rs  trustdb_init.rs
crates/tools/src/: fapolicy_profiler.rs  lib.rs  rule_check.rs  trust_db_util.rs
crates/trust/: Cargo.toml
crates/trust/src/: check.rs  db.rs  error.rs  filter.rs  lib.rs  load.rs  ops.rs  parse.rs  read.rs  source.rs  stat.rs  trust.rs  write.rs
crates/trust/src/filter/: db.rs  error.rs  load.rs  mod.rs  ops.rs  parse.rs  read.rs  write.rs
crates/trust/tests/: write.rs
data/: config.toml  fapolicy-analyzer-about.json  fapolicy-analyzer-cli-rules.8  (+4 more)
py/: .gitignore  Cargo.toml  Pipfile  setup.py
py/.cargo/: config
py/examples/: changeset.py  simple.py  system.py  validate_install.py
py/fapolicy_analyzer/: __init__.py
py/fapolicy_analyzer/util/: __init__.py  fs.py
py/src/: app.rs  lib.rs  svc.rs  syscheck.rs  trust.rs
py/tests/: test_trust_file_list.py
py/tests/data/: one.trust
python/: .flake8  .testmondata  Cargo.toml  MANIFEST.in  Pipfile  babel.cfg  setup.cfg  setup.py
python/.eggs/setuptools-54.2.0-py3.8.egg/EGG-INFO/: RECORD  requires.txt
python/css/: notification.css
python/examples/: changeset.py  deployment.py  parse_events.py  show_ancillary.py  show_ancillary_async.py  show_system.py  show_system_async.py
python/fapolicy_analyzer/: __init__.py
python/fapolicy_analyzer/glade/: add_file_button.glade  analyzer_selection_dialog.glade  ancillary_trust_database_admin.glade  main_window.glade  policy_rules_admin_page.glade  searchable_list.glade  trust_file_list.glade  user_list.glade
python/fapolicy_analyzer/locale/: fapolicy_analyzer.pot
python/fapolicy_analyzer/locale/es/LC_MESSAGES/: fapolicy_analyzer.po
python/fapolicy_analyzer/tests/: conftest.py  context.py  helpers.py  mocks.py  test_acl_list.py  test_analyzer_selection_dialog.py  test_ancillary_trust_database_admin.py  test_ancillary_trust_file_list.py  test_confirm_info_dialog.py  test_confirmation_dialog.py  test_database_admin_page.py  test_deploy_confirm_dialog.py  test_fapd_dbase.py  test_format.py  test_fs.py  test_main.py  test_main_window.py  test_notification.py  test_object_list.py  test_policy_rules_admin_page.py  test_searchable_list.py  test_state_manager.py  test_string_list.py  test_subject_list.py  test_system_trust_database_admin.py  test_trust_file_details.py  test_trust_file_list.py  test_xdg_utils.py
python/fapolicy_analyzer/ui/: __main__.py  acl_list.py  add_file_button.py  analyzer_selection_dialog.py  ancillary_trust_database_admin.py  ancillary_trust_file_list.py  configs.py  confirm_changes_dialog.py  confirm_info_dialog.py  database_admin_page.py  deploy_confirm_dialog.py  main_window.py  notification.py  object_list.py  policy_rules_admin_page.py  searchable_list.py  state_manager.py  string_list.py  strings.py  subject_list.py  system_trust_database_admin.py  trust_file_details.py  trust_file_list.py  ui_widget.py  unapplied_changes_dialog.py
python/fapolicy_analyzer/util/: fapd_dbase.py  format.py  fs.py  users.py  xdg_utils.py
python/glade/: analyzer_selection_dialog.glade  ancillary_trust_database_admin.glade  main_window.glade  system_trust_database_admin.glade  trust_file_list.glade  unapplied_changes_dialog.glade
python/locale/: fapolicy_analyzer.pot
python/locale/es/LC_MESSAGES/: fapolicy_analyzer.po
python/resources/glade/: system_trust_database_admin.glade
python/src/: acl.rs  app.rs  event.rs  syscheck.rs  trust.rs
python/tests/: helpers.py  test_ancillary_trust_database_admin.py  test_trust_file_details.py
python/tests/data/: one.trust
(+634 files in other folders)
