[package]
name = "fapolicy-tools"
description = "Tools to assist with the configuration and maintenance of fapolicyd"
license = "GPL-3.0-or-later"
version = "0.3.0"
edition = "2018"

[[bin]]
name = "tdb"
path = "crates/tools/trust_db_util.rs"

[[test]]
name = "integration"
path = "tests/tests.rs"

[workspace]
members = [
    "crates/analyzer",
    "crates/app",
    "crates/api",
    "crates/daemon",
    "crates/pyo3",
    "crates/trust",
    "crates/util",
]

[dependencies]
clap = "3.0.0-beta.2"
lmdb-rkv = "0.14.0"
nom = "6.1.0"
rayon = "1.5"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"

fapolicy-api = { version = "0.3.0", path = "crates/api" }
fapolicy-analyzer = { version = "0.3.0", path = "crates/analyzer" }
fapolicy-app = { version = "0.3.0", path = "crates/app" }
fapolicy-daemon = { version = "0.3.0", path = "crates/daemon" }
fapolicy-trust = { version = "0.3.0", path = "crates/trust" }
fapolicy-util = { version = "0.3.0", path = "crates/util" }
