[package]
name = "fapolicy-tools"
description = "Tools to assist with the configuration and maintenance of fapolicyd"
license = "GPL-3.0-or-later"
version = "0.5.0"
edition = "2018"

[[bin]]
name = "tdb"
path = "crates/tools/trust_db_util.rs"

[[test]]
name = "integration"
path = "tests/tests.rs"

[workspace]
members = [
    "crates/analyzer",
    "crates/app",
    "crates/api",
    "crates/daemon",
    "crates/pyo3",
    "crates/rules",
    "crates/trust",
    "crates/util",
]

[dev-dependencies]

[dependencies]
clap = "3.0.0-beta.2"
lmdb-rkv = "0.14.0"
nom = "6.1.0"
rayon = "1.5"
thiserror = "1.0"
codespan-reporting = "0.11"
unindent = "0.1"
termcolor = "1.0"
memchr = "2.4"

fapolicy-api = { version = "*", path = "crates/api" }
fapolicy-analyzer = { version = "*", path = "crates/analyzer" }
fapolicy-app = { version = "*", path = "crates/app" }
fapolicy-daemon = { version = "*", path = "crates/daemon" }
fapolicy-rules = { version = "*", path = "crates/rules" }
fapolicy-trust = { version = "*", path = "crates/trust" }
fapolicy-util = { version = "*", path = "crates/util" }
