[package]
name = "fapolicy-tools"
description = "Tools to assist with the configuration and maintenance of fapolicyd"
license = "GPL-3.0-or-later"
version = "0.5.0"
edition = "2018"

[[bin]]
name = "tdb"
path = "crates/tools/trust_db_util.rs"

[[bin]]
name = "rulec"
path = "crates/tools/rule_check.rs"

[[test]]
name = "integration"
path = "tests/tests.rs"

[workspace]
members = [
    "crates/analyzer",
    "crates/app",
    "crates/api",
    "crates/daemon",
    "crates/pyo3",
    "crates/rules",
    "crates/trust",
    "crates/util",
]

[dev-dependencies]

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
lmdb-rkv = "0.14.0"
nom = "7.1"
rayon = "1.5"
thiserror = "1.0"
ariadne = "0.1"

fapolicy-api = { version = "*", path = "crates/api" }
fapolicy-analyzer = { version = "*", path = "crates/analyzer" }
fapolicy-app = { version = "*", path = "crates/app" }
fapolicy-daemon = { version = "*", path = "crates/daemon" }
fapolicy-rules = { version = "*", path = "crates/rules" }
fapolicy-trust = { version = "*", path = "crates/trust" }
fapolicy-util = { version = "*", path = "crates/util" }
