[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fapolicy_analyzer"
description = "File Access Policy Analyzer"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    #"pycairo==1.25.1",
    #"PyGObject==3.46.0",
    "configargparse==1.7.1",
    "rx==3.2",
    "more-itertools==10.1.0",
    "importlib-resources==6.4.4",
    "importlib-metadata==8.6.1",
    "dataclasses==0.6",
    "matplotlib~=3.9.1",
    "tomli==2.0.1"
]

[project.scripts]
gui = "fapolicy_analyzer.ui.__main__:main"

[tool.maturin]
module-name = "fapolicy_analyzer.rust"
features = ["pyo3/extension-module"]
manifest-path = "crates/pyo3/Cargo.toml"
python-packages = ["fapolicy_analyzer"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
extend-ignore = ["E203", "E402"]

[tool.towncrier]
filename = "CHANGELOG.md"
version = "0.0.0"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## [v{version}](https://github.com/ctc-oss/fapolicy-analyzer/releases/tag/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/ctc-oss/fapolicy-analyzer/pull/{issue})"
underlines = ["", "", ""]
directory = "news"
template = "scripts/.towncrier.template.md"

[tool.towncrier.fragment.added]
name = "Added"
[tool.towncrier.fragment.changed]
name = "Changed"
[tool.towncrier.fragment.removed]
name = "Removed"
[tool.towncrier.fragment.fixed]
name = "Fixed"
[tool.towncrier.fragment.packaging]
name = "Packaging"

[dependency-groups]
dev = [
    "babel>=2.17.0",
    "babelgladeextractor>=0.7.0",
    "bs4>=0.0.2",
    "markdown2>=2.5.4",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
