[package]
name = "fapolicy-analyzer-python"
version = "0.0.1"
authors = ["John Wass <wassj@ctc.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies.api]
path = "../crates/api"

[dependencies.fapolicyd]
path = "../crates/fapolicyd"

[dependencies.fapolicy-analyzer]
path = ".."

[dependencies.pyo3]
version = "0.12.1"
features = [ "extension-module",]
