[package]
name = "fapolicy-analyzer-python"
description = "Tools to assist with the configuration and maintenance of fapolicyd"
license = "LGPL-3.0-only"
version = "0.0.4"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies.fapolicy-analyzer]
path = ".."

[dependencies.pyo3]
version = "0.13.2"
