[package]
name = "fapolicy-analyzer-python"
description = "Python bindings for the fapolicy-analyzer library"
license = "LGPL-3.0-or-later"
version = "0.0.4"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rayon = "1.5"

[dependencies.fapolicy-analyzer]
path = ".."

[dependencies.pyo3]
version = "0.13.2"
