[package]
name = "fapolicy-analyzer"
description = "Analyzer support for fapolicyd"
license = "MPL-2.0"
version = "0.4.1"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
nom = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = "0.4.22"

fapolicy-daemon = { version = "*", path = "../daemon" }
fapolicy-rules = { version = "*", path = "../rules" }
fapolicy-trust = { version = "*", path = "../trust" }
