[package]
name = "fapolicy-analyzer"
description = "Analyzer support for fapolicyd"
license = "MPL-2.0"
version = "0.4.1"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = "0.4"
log = "0.4"

fapolicy-auparse = { path = "../auparse" }
fapolicy-daemon = { path = "../daemon" }
fapolicy-rules = { path = "../rules" }
fapolicy-trust = { path = "../trust" }
