[package]
name = "fapolicy-api"
description = "File Access Policy API"
license = "LGPL-3.0-or-later"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
