[package]
name = "fapolicy-app"
description = "Application state management components"
license = "MPL-2.0"
version = "0.4.1"
edition = "2018"

[dependencies]
confy = "0.4.0"
directories = "2.0.2"
lmdb-rkv = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

fapolicy-analyzer = { version = "*", path = "../analyzer" }
fapolicy-daemon = { version = "*", path = "../daemon" }
fapolicy-rules = { version = "*", path = "../rules" }
fapolicy-trust = { version = "*", path = "../trust" }
