[package]
name = "fapolicy-app"
description = "Application state management components"
license = "MPL-2.0"

version = "0.4.1"
edition = "2021"

[dependencies]
confy = "0.4"
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"

fapolicy-analyzer = { path = "../analyzer" }
fapolicy-daemon = { path = "../daemon" }
fapolicy-rules = { path = "../rules" }
fapolicy-trust = { path = "../trust" }

[features]
default = []
xdg = []
