[package]
name = "fapolicy-daemon"
description = "Bindings to fapolicyd"
license = "MPL-2.0"
version = "0.5.0"
edition = "2018"

[dependencies]
nom = "6.1.0"
thiserror = "1.0"
fapolicy-trust = { version = "*", path = "../trust" }
fapolicy-rules = { version = "*", path = "../rules" }
fapolicy-util = { version = "*", path = "../util" }
dbus = "0.9"
tempfile = "3.3"
