[package]
name = "fapolicy-daemon"
description = "Bindings to fapolicyd"
license = "MPL-2.0"
version = "1.0.0"
edition = "2021"

[dev-dependencies]
assert_matches = "1.5"

[dependencies]
nom = "7.1"
thiserror = "1.0"
dbus = "0.9"
tempfile = "3.3"
log = "0.4"

fapolicy-trust = { path = "../trust" }
fapolicy-rules = { path = "../rules" }
fapolicy-util = { path = "../util" }
