[package]
name = "fapolicy-pyo3"
description = "Python bindings for the fapolicy-analyzer"
license = "MPL-2.0"
version = "0.4.2"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15", features = ["abi3-py36", "auto-initialize"] }
similar = "2.1"
chrono = "0.4.22"
tempfile = "3.3"
pyo3-log = "0.8.1"
log = "0.4"

fapolicy-analyzer = { version = "*", path = "../analyzer" }
fapolicy-app = { version = "*", path = "../app" }
fapolicy-daemon = { version = "*", path = "../daemon" }
fapolicy-rules = { version = "*", path = "../rules" }
fapolicy-trust = { version = "*", path = "../trust" }
