[package]
name = "fapolicy-pyo3"
description = "Python bindings for the fapolicy-analyzer"
license = "MPL-2.0"

version = "0.4.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3", "auto-initialize"] }
similar = "2.1"
chrono = "0.4"
tempfile = "3.3"
log = "0.4"
pyo3-log = "0.11"

fapolicy-analyzer = { path = "../analyzer" }
fapolicy-auparse = { path = "../auparse" }
fapolicy-app = { path = "../app" }
fapolicy-daemon = { path = "../daemon" }
fapolicy-rules = { path = "../rules" }
fapolicy-trust = { path = "../trust" }
fapolicy-util = { path = "../util" }

[features]
default = []
audit = []
xdg = ["fapolicy-app/xdg"]
