[package]
name = "fapolicy-rules"
description = "Rule support for fapolicyd"
license = "MPL-2.0"
version = "0.4.6"
edition = "2021"

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.3"
assert_matches = "1.5"

[dependencies]
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
is_executable = "1"
