[package]
name = "fapolicy-tools"
description = "Tools to assist with the configuration and maintenance of fapolicyd"
license = "GPL-3.0-or-later"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "tdb"
path = "src/trust_db_util.rs"

[[bin]]
name = "faprofiler"
path = "src/fapolicy_profiler.rs"

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
lmdb = "0.8"
nom = "7.1"
rayon = "1.5"
thiserror = "1.0"
log = "0.4"

fapolicy-analyzer = { path = "../analyzer" }
fapolicy-app = { path = "../app" }
fapolicy-daemon = { path = "../daemon" }
fapolicy-rules = { path = "../rules" }
fapolicy-trust = { path = "../trust" }
fapolicy-util = { path = "../util" }
