[package]
name = "fapolicy-tools"
description = "Tools to assist with the configuration and maintenance of fapolicyd"
license = "GPL-3.0-or-later"
version = "1.5.0"
edition = "2021"

[[bin]]
name = "tdb"
path = "src/trust_db_util.rs"

[[bin]]
name = "faprofiler"
path = "src/fapolicy_profiler.rs"

[[bin]]
name = "rulec"
path = "src/rule_check.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
lmdb = "0.8"
nom = "7.1"
thiserror = "1.0"
log = "0.4"
ariadne = { version = "0.4", optional = true }
human-panic = "2.0"
env_logger = "0.11"
strip-ansi-escapes = "0.2"

fapolicy-app = { path = "../app" }
fapolicy-daemon = { path = "../daemon" }
fapolicy-rules = { path = "../rules" }
fapolicy-trust = { path = "../trust" }
fapolicy-util = { path = "../util" }


[features]
default = []
deb = []
pretty = ["dep:ariadne"]
