[package]
name = "fapolicy-trust"
description = "Trust support for fapolicyd"
license = "MPL-2.0"
version = "0.4.0"
edition = "2018"

[package.metadata]
msrv = "1.54.0"

[dependencies]
lmdb-rkv = "0.14.0"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

fapolicy-api = { version = "*", path = "../api" }
fapolicy-util = { version = "*", path = "../util" }
